--- a/Report.Fields/Report.Fields.csproj
+++ b/Report.Fields/Report.Fields.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbsenceFields.cs" />
     <Compile Include="DTO\Types.cs" />
     <Compile Include="EmployeeFields.cs" />
     <Compile Include="Enums\BooleanFormatString.cs" />
@@ -61,6 +62,11 @@
     <Compile Include="Enums\ReportTypeEnum.cs" />
     <Compile Include="eServicesEnums\Enums.cs" />
     <Compile Include="eServicesEnums\SystemEnums.cs" />
+    <Compile Include="Model\AbsenceDDM.cs" />
+    <Compile Include="CareerHistoryFields.cs" />
+    <Compile Include="Model\CareerHistoryDDM.cs" />
+    <Compile Include="Model\EmployeeDDM.cs" />
+    <Compile Include="Model\PicklistDDM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ref\BooleanFormatString.cs" />
     <Compile Include="Ref\DataDisplayModeEnum.cs" />
